# min-web-front

./: .editorconfig  .gitignore  Makefile  README.md
bash/demo/: demo-dev.sh
cnf/: readme.txt
lib/bash/funcs/: export-json-section-vars.func.sh  parse-ini-section-vars.func.sh  perform-apt-get-install.func.sh  ubuntu-sync-time.func.sh
src/bash/run/: check-install-poetry.func.sh  check-install-py-modules.func.sh  docker-init.sh  get-list-file-from-action.func.sh  morph-dir.func.sh  run.sh  ubuntu-check-install-awscli.func.sh  ubuntu-check-install-awscli.lst  ubuntu-check-install-awscli.requirements.txt  ubuntu-check-install-global-npm-modules.func.sh  ubuntu-check-install-nodejs.func.sh
src/docker/devops/: Dockerfile
src/python/api-caller/: api_caller.py  pyproject.toml
src/python/min-jinja/: tpl_gen.py
